add_library(ast 
    BinaryExprAST.cpp
    NumberExprAST.cpp
    VariableExprAST.cpp
    CallExprAST.cpp
    PrototypeAST.cpp
    FunctionAST.cpp
    IfExprAST.cpp
    ExprAST.h
    BinaryExprAST.h
    NumberExprAST.h
    VariableExprAST.h
    CallExprAST.h
    PrototypeAST.h
    FunctionAST.h
    IfExprAST.h
)